// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests en <MasterGidApp /> Debe matchear con el snapshot 1`] = `
<Fragment>
  <h2>
    Master Gif
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Tests en <MasterGidApp /> Debe mostrar la lista de categorias 1`] = `
<Fragment>
  <h2>
    Master Gif
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;
